<resources>
    <string name="app_name">Pariwisata</string>
    <string name="pariwisata">PARIWISATA</string>
    <string name="slogan">Your Best Tourism Partner</string>
    <string name="explore">EXPLORE</string>
    <string name="finish">FINISH</string>
    <string name="continu">CONTINUE</string>
    <string name="sign_in">SIGN IN</string>
    <string name="new_account">NEW ACCOUNT</string>
    <string name="get_started_slogan">Discover \nThe Beauty \nOf Earth</string>
    <string name="name_label">Name</string>
    <string name="bio_label">Bio</string>
    <string name="username_label">Username</string>
    <string name="email_label">Email Address</string>
    <string name="password_label">Password</string>
    <string name="success_create_account_label">Congratulation</string>
    <string name="success_create_account_message">Start your journey today</string>
    <string name="selfie_time_label">Selfie Time</string>
    <string name="complete_account_label">Let the world knows yourself better</string>
    <string name="create_new_account_label">Create New Account</string>
    <string name="create_new_account_desc">Please fill up the forms below for information</string>
</resources>